# ct-controller

./: CHANGELOG.md  Dockerfile  Dockerfile-test  LICENSE  Makefile  README.md  build_from_repo.sh  entrypoint.sh  install.sh  pyproject.toml  sample_config.yml  setup.py
.github/workflows/: docker-image.yml  test_suite.yml
ctcontroller/: .state.py  __init__.py  api.py  application_manager.py  camera_traps.py  chameleon_controller.py  chameleon_provisioner.py  cli.py  controller.py  ct_main.py  error.py  local.py  local_provisioner.py  provisioner.py  remote.py  tacc_controller.py  tacc_provisioner.py  util.py
inputs/: docker-compose-cpu.yml  docker-compose-nano.yml  docker-compose.yml
systemd/: ctcontroller.service  env  start-ctcontroller-container.sh
